:lipstck: :art: more modular config.less

--- a/less/boon-sheet.less
+++ b/less/boon-sheet.less
@@ -11,8 +11,7 @@
         .boon-line{
             display: flex;
             flex-direction: row;
-            font-family: @long-text-font;
-            font-size: @long-text-font-size;
+            font: @boon-extratext-font;
             .boon-block{
                 display: flex;
                 flex-direction: row;
