--- a/less/tab/player-equipment.less
+++ b/less/tab/player-equipment.less
@@ -30,8 +30,7 @@
                 object-fit: contain;
             }
             .equipment-name{
-                font-family: @long-text-font;
-                font-size: @long-text-font-size;
+                font: @equipment-name-font;
                 padding-left: 0.5em;
                 align-self: center;
             }
