--- a/templates/chat/roll-result.html
+++ b/templates/chat/roll-result.html
@@ -1,8 +1,10 @@
 <div class="chatroll">
     <div class="intro">
+        {{#if (ne actingCharImg "icons/svg/mystery-man.svg")}}
         <div class="introImg">
             <img src="{{actingCharImg}}" title="{{actingCharName}}" />
         </div>
+        {{/if}}
         <div class="introText">{{introText}}</div>
     </div>  
     {{#each applyModifiers as |mod id|}}    
