--- a/less/config.less
+++ b/less/config.less
@@ -8,7 +8,7 @@
 }
 @font-face{
     font-family: "Merriweather";
-    src: url("./assets/fonts/Merriweather-Regular.ttf");
+    src: url("../../systems/cleenmain/assets/fonts/Merriweather-Regular.ttf");
 }
 
 
@@ -16,53 +16,66 @@
     font-family: "Signika";
 }
 
-@default-font: "Modesto condensed";
-@default-font-size: 1.1rem;
-@title-font: "Signika";
-@long-text-font: "Merriweather";
-@long-text-font-size: 0.7rem;
-@boon-name-size: 1.2rem;
-@combat-table-title-font: "Modesto condensed";
-@combat-table-title-font-size: 1rem;
-@combat-table-font: "Signika";
-@combat-table-font-size: 0.9rem;
-@combat-table-font-weight: lighter;
+@default-font: 1.1rem "Modesto condensed";
+@title-font: 1rem "Signika";
+@long-text-font: 0.7rem "Merriweather";
 
-@pc-skill-font: "Modesto condensed";
-@pc-skill-font-size: 1.1rem;
+//Playersheet
+//titres: "compétences", "armes", "protections"
+@pc-title-font: 1.1rem "Signika";
+//char name
+@pc-name-font: 1.4rem "Signika";
+//skill names
+@pc-skill-font: 1.2rem "Modesto condensed";
+//description, activity
+@pc-description-font: 1.1rem "Modesto condensed";
+@pc-activity-font: 1rem "Signika";
+//tabs
+@pc-tab-font: 1.1rem "Modesto condensed";
+@pc-tab-font-color: #726e6e;
+//combat
+@combat-trainings-font: 1.1rem "Modesto condensed";
+@combat-bonus-font: 1.1rem "Modesto condensed";
+@combat-table-title-font: 0.9rem "Signika";
+@combat-table-font: normal 0.9rem "Signika";
+//boons
+@boon-name-font: 1.2rem "Modesto condensed";
+@boon-text-font: 0.7rem "Merriweather";
+@boon-extratext-font: 1.2rem "Modesto condensed";
+//equipment
+@equipment-name-font: 0.9rem "Signika";
+//bio
+@bio-title-font: 1rem "Signika";
+@bio-border: 2px  solid black ;
 
-@npc-name-font: "Signika";
+//npc
+@npc-name-font: 2em "Signika";
 @npc-name-color: @title-color;
-@npc-name-font-size: 2em;
-@npc-activity-font-size: 1.1em;
-@npc-combat-line-font: "Signika";
-@npc-combat-line-font-size: 1.2rem;
+@npc-activity-font: 1.1em "Signika";
+@npc-combat-line-font: 1.2rem "Signika";
 @npc-combat-line-font-color: black;
-@npc-skill-font: "Modesto condensed";
-@npc-skill-font-size: 1.2rem;
+@npc-skill-font: 1.2rem "Modesto condensed";
 @npc-skill-font-color: black;
+@npc-health-font: 1.2rem "Signika";
 
-@dialog-font: "Signika";
-@dialog-font-size: 1rem;
-@dialog-intro-font-size: 1.2rem;
-@dialog-intro-font-weight: bold;
+@dialog-font: 1rem "Signika";
+@dialog-intro-font: bold 1.2rem "Signika";
+@dialog-formula-font: bold 1.2rem "Signika";
+@dialog-bonus-label-font: 1rem "Signika";
 
-@chat-font: "Signika";
-@chat-font-size: 1rem;
-@chat-intro-font: "Signika";
-@chat-intro-font-size: 1rem;
+@chat-font: 1rem "Signika";
+@chat-intro-font: 1rem "Signika";
 @chat-title-border-radius: 20px;
-@chat-modifier-font-style: italic;
-@chat-modifier-font-size: 0.9rem;
+@chat-modifier-font: italic 0.9rem "Signika";
+@chat-formulatext-font: 1rem "Signika";
+@chat-finaltext-font: 1rem "Signika";
 @chat-end-height: 0px;
 
-@h1-font-family: "Signika";
-@h1-font-size: 1.2rem;
+@h1-font: 1.2rem "Signika";
 @h1-text-transform: uppercase;
 @h1-border: none;
 
-@h2-font-family: "Signika";
-@h2-font-size: 1rem;
+@h2-font: 1rem "Signika";
 
 input {
     color: @core-main-color;
@@ -82,7 +95,6 @@ input {
 @font-color-booncard: black;
 @border-color-skill: rgb(146, 142, 142);
 @border-color-combat-bonus: rgb(146, 142, 142);
-
 @chat-introtext: white;
 @chat-formulatext: black;
 @chat-finaltext: black;
@@ -92,7 +104,7 @@ input {
 @editor-height: 5em;
 
 //images
-@playersheet-background: no-repeat url('../../../ui/parchment.jpg');
+@playersheet-background: repeat url('../../../ui/parchment.jpg');
 @itemsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @npcsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-background: repeat url('../../../ui/parchment-white.jpg');
