--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -1,28 +1,25 @@
 .cleenmain.sheet.item {
     h1 {
-        font-family: @h1-font-family;
-        font-size: @h1-font-size;
+        font: @h1-font;
         color: @title-color;
         text-transform: @h1-text-transform;
         border: @h1-border;
     }
     h2 {
-        font-family: @h2-font-family;
-        font-size: @h1-font-size;
+        font: @h2-font;
         color: @title-color;
     }
     .window-content {
         background: @itemsheet-background;
         background-color: @clear-background;
-        font-family: @default-font;
+        font: @default-font;
     }
     .editor {
         height: 100%;
         width: 100%;
         background:@edit-background;
         box-shadow: inset 0 0 6px black;
-        font-family: @long-text-font;
-        font-size: @long-text-font-size;
+        font: @long-text-font;
     }
     input{
         background-color: @edit-background;
