--- a/less/tab/player-combat.less
+++ b/less/tab/player-combat.less
@@ -1,93 +1,88 @@
 .cleenmain.sheet.player {
-    .main{
-        .tooltip .tooltiptext {
-            visibility: hidden;
-            width: 120px;
-            background-color: black;
-            color: #fff;
-            text-align: center;
-            padding: 5px 0;
-            border-radius: 6px;
-        
-            position: absolute;
-            z-index: 1;
-        }
-        
-        .tooltip:hover .tooltiptext {
-            visibility: visible;
-        }
-        h1{
-            .tooltiptext{
-                font-family: @long-text-font;
-                font-size: @long-text-font-size;
-                font-weight: normal;
-                text-transform: none;
-            }
-        }
-        .central{
-            .combat-tab{
-                margin: 1em 0 0.5em 0;
-                display: flex;
-                flex-direction: column;
-                .title-line{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                }
-                .item-create{
-                    margin-left: auto;
-                }
-                .trainings-list{
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                padding-bottom: 0.5em;
-                    .trainings-group{
-                        display: flex;
-                        flex-direction: row;
-                        flex-grow: 1;
-                        .trainings-name{
-                            margin: 0 .6em 0 .2em;
-                        }
-                    }
-                }
-                .bonus-list{
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    .bonus-line{
-                        display: flex;
-                        flex-direction: row;
-                        flex-grow: 1;
-                        .bonus-name{
-                            padding: 0 0.5em 0 1em;
-                        }
-                        .bonus-text{
-                            background: @clear-background;
-                            border: 1px solid @border-color-combat-bonus;
-                            border-radius: 5px;
-                            width: 10%;
-                            text-align: center;
+  .main {
+    .tooltip .tooltiptext {
+      visibility: hidden;
+      width: 120px;
+      background-color: black;
+      color: #fff;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 6px;
 
-                        }
-                    }
-                }
-                .items{
-                    thead{
-                        font-family: @combat-table-title-font;
-                        font-size: @combat-table-title-font-size;
-                    }
-                    .item{
-                        font-family: @combat-table-font;
-                        font-size: @combat-table-font-size;
-                        font-weight: @combat-table-font-weight;
-                    }
-                }
-                .combat-group-label{
-                    font-style: italic;
-                    padding-right: 0.5em;
-                }
-            }
-        }
+      position: absolute;
+      z-index: 1;
     }
+
+    .tooltip:hover .tooltiptext {
+      visibility: visible;
+    }
+    h1 {
+      .tooltiptext {
+        font: @long-text-font;
+        font-weight: normal;
+        text-transform: none;
+      }
+    }
+    .central {
+      .combat-tab {
+        margin: 1em 0 0.5em 0;
+        display: flex;
+        flex-direction: column;
+        .title-line {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+        }
+        .item-create {
+          margin-left: auto;
+        }
+        .trainings-list {
+          font: @combat-trainings-font;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          padding-bottom: 0.5em;
+          .combat-group-label {
+            font-style: italic;
+            padding-right: 0.5em;
+          }
+          .trainings-group {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+            .trainings-name {
+              margin: 0 0.6em 0 0.2em;
+            }
+          }
+        }
+        .bonus-list {
+          font: @combat-bonus-font;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          .bonus-line {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+            .bonus-name {
+              padding: 0 0.5em 0 1em;
+            }
+            .bonus-text {
+              background: @clear-background;
+              border: 1px solid @border-color-combat-bonus;
+              border-radius: 5px;
+              width: 10%;
+              text-align: center;
+            }
+          }
+        }
+        .combat-table-head {
+          font: @combat-table-title-font;
+        }
+        .combat-table {
+          font: @combat-table-font;
+        }
+      }
+    }
+  }
 }
