--- a/less/tab/player-notes.less
+++ b/less/tab/player-notes.less
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 1em;
-    font-family: @long-text-font;
-    font-size: @long-text-font-size;
+    font: @long-text-font;
     
   .editor{
     min-height: 200px;
@@ -12,6 +11,7 @@
     .editor-content{
       min-height: 200px;
       max-height: 400px;
+      margin: 1em;
     }
     .tox.tox-tinymce{
       min-height: auto;
