--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -52,7 +52,7 @@
                         </div>
                     {{/if}}
                     {{#each weapons as |item id|}}
-                        <div class="weapon-line combat-table draggable" data-item-id="{{_id}}">
+                        <div class="weapon-line item combat-table draggable" data-item-id="{{_id}}">
                             <div class="line-label">{{localize "CLEENMAIN.label.combat"}}</div>
                             <div class="weapon-el">({{name}})</div>
                             {{#if ../eliteRulesetModif}}
