--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -32,6 +32,14 @@
                 <label for="item.system.used">{{localize "CLEENMAIN.boon.used"}}</label>
                 <input class="checkbox inline-edit" data-field="system.used" name="item.system.used" type="checkbox"
                     {{checked item.system.used}}>
+                {{#if item.system.limitedUsed2}}
+                <input class="checkbox inline-edit" data-field="system.used2" name="item.system.used2" type="checkbox"
+                    {{checked item.system.used2}}>
+                {{/if}}
+                {{#if item.system.limitedUsed3}}
+                <input class="checkbox inline-edit" data-field="system.used3" name="item.system.used3" type="checkbox"
+                    {{checked item.system.used3}}>
+                {{/if}}
             </div>
             {{/if}}
         </div>
