:bug: Minor modification of the user guide

--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -7,12 +7,12 @@
     <p> les options du système sont les suivantes:</p>
     <ul>
         <li>Nombre de joueurs : cette valeur modifie les points d'endurance des PNJs et le maximum de points d'héroïsme des PJs.</li>
-        <li>Règles avancées : cette option active l'utilisation des règles avancées de clé en main : PnJs "élite", nouvelle prime/pénalités... Ces regles sont expliquées dans les chapitres correspondants</li>
+        <li>Règles avancées : cette option active l'utilisation des règles avancées de clé en main : PNJs "élite", nouvelle prime/pénalités... Ces règles sont expliquées dans les chapitres correspondants</li>
     </ul>
     <h2>Feuilles de Personnage</h2>
-    <p> Il y a deux types de personnages: les PJs et les PnJs. Lorsque vous créez un nouveau personnage , vous devez choisir son type.</p>
-    <p>Une fois créé, pour modifier le personnage vous devez d'abord déverrouiller sa feuille en cliquant sur l'icone <em class="fas fa-lock">&nbsp;</em> . Elle passe alors en mode édition.<br />
-    Recliquez sur l'icone pour la verrouiller. Les seules modifications qui peuvent être faites sur une feuille vérouillée sont les points d'endurance courants, les points d'héroisme courants et les blessures.</p>
+    <p> Il y a deux types de personnages: les PJs et les PNJs. Lorsque vous créez un nouveau personnage, vous devez choisir son type.</p>
+    <p>Une fois créé, pour modifier le personnage vous devez d'abord déverrouiller sa feuille en cliquant sur l'icône <em class="fas fa-lock">&nbsp;</em> . Elle passe alors en mode édition.<br />
+    Recliquez sur l'icône pour la verrouiller. Les seules modifications qui peuvent être faites sur une feuille verrouillée sont les points d'endurance courants, les points d'héroîsme courants et les blessures.</p>
     <h3>Compétences</h3>
     <p>Les feuilles sont automatiquement créés avec une liste de compétences "par défaut". Certains jeux de la gamme clé en main peuvent parfois indiquer d'autres compétence, ou en enlever certaines. Vous pouvez supprimer ou ajouter librement des compétences lorsque la feuille est en mode édition. Vous pouvez aussi ajouter des spécialités en modifiant le nom de la compétence (par exemple "Connaissance: stratégie militaire".</p>
     <p>En mode édition, deux cases à cocher permettent de préciser:</p>
@@ -25,33 +25,35 @@
             <li>Soit en créant un objet du bon type, puis en l'attribuant au personnage en faisant un glisser-déposer vers sa feuille,</li>
             <li>Soit en les créant directement dans la section correspondante de la feuille d'un personnage en cliquant sur <em class="fas fa-plus">&nbsp;</em> </i>.</li>
         </ul>
-        <p>Les objets apparaissent dans l'onglet "équipement". Lorsque la feuille est vérrouillée, un icône indique l'état de l'objet:</p>
+        <p>Les objets apparaissent dans l'onglet "équipement". Lorsque la feuille est verrouillée, une icône indique l'état de l'objet:</p>
         <ul>
             <li><em class="fas fa-hand">&nbsp;</em> : L'objet est en main, l'armure est portée, on considère que l'object est actif.</li>
             <li><em class="fas fa-backpack">&nbsp;</em> : L'objet est dans un sac ou une poche, il est rapidement utilisable.</li>
             <li><em class="fas fa-home">&nbsp;</em> : L'objet est rangé, chez soit ou en tout autre endroit qui n'est pas immédiatement accessbile.</li>
         </ul>
-        <p>Il suffit de cliquer sur l'icone pour modifier l'état d'un objet.</p>
-        <p>Seules les armes et armures marquées <em class="fas fa-hand">&nbsp;</em> apparaitront dans l'onglet combat.</p>
+        <p>Il suffit de cliquer sur l'icône pour modifier l'état d'un objet.</p>
+        <p>Seules les armes et armures marquées <em class="fas fa-hand">&nbsp;</em> apparaîtront dans l'onglet combat.</p>
         <h3>Atouts</h3>
         <P>Les atouts sont matérialisés par des items. Vous pouvez créer des atouts dans l'onglet "objets" de Foundry, puis les glisser-déposer vers les personnages qui en disposent. Vous pouvez aussi créer directement l'atout dans une feuille de personnage déverrouillée.</P>
-        <p>Lorsque que vous ouvrez un atout, vous pouvez en modifier la description. Si l'atout est à usage limité (par exemple 1 fois par jour), cochez la case correspondante. Lorsque l'atout sera affecté à un personnage, une case apparaitra à côté de l'atout sur la feuille de personnage qui permet de tracer l'utilisation de l'atout.</p>
-        <p>Les atouts affectés à un personnage apparaissent dans l'onglet "Atouts". Lorsque la feuille est déverrouillée, vous avez acces à des icones pour modifier l'atout ou le supprimer. Vous avez aussi accès à la case "appris", qui permet de préciser que l'atout a été débloqué par le personnage lors d'une progression.</p>
+        <p>Lorsque que vous ouvrez un atout, vous pouvez en modifier la description. Si l'atout est à usage limité (par exemple 1 fois par jour), cochez la case correspondante. Lorsque l'atout sera affecté à un personnage, une case apparaîtra à côté de l'atout sur la feuille de personnage qui permet de tracer l'utilisation de l'atout.</p>
+        <p>Les atouts affectés à un personnage apparaissent dans l'onglet "Atouts". Lorsque la feuille est déverrouillée, vous avez acces à des icônes pour modifier l'atout ou le supprimer. Vous avez aussi accès à la case "appris", qui permet de préciser que l'atout a été débloqué par le personnage lors d'une progression.</p>
         <h3>Armures</h3>
         <p>Le champ malus des armures permet d'indiquer le malus qui s'appliquera aux jets de compétence physique. Il doit être indiéque en valeur absolue (ex: indiquez 2 pour une armure qui diminue de deux point la valeur des jets).</p>
     <h3>Jets d'attaque</h3>
     <p>PJs: Pour pouvoir attaquer avec une arme, vous devez d'abord indiquer quelle compétence sera utilisée avec elle. Pour cela, en mode édition, cliquez sur la compétence, maintenez appuyé le bouton de souris et faites un glisser-déposer vers la ligne de l'arme.</p>
-    <p>PnJs: la valeur de la compétence doit être rentrée manuellement dans le champ "compétence".</p>
-    <h2>PnJ</h2>
-    <p>Les PnJ sont par défaut créés avec les 4 compétences de base. Vous pouvez en ajouter d'autres avec l'icone <em class="fas fa-plus">&nbsp;</em> .</p>
+    <p>PNJs: La valeur de la compétence doit être rentrée manuellement dans le champ "compétence".</p>
+    <h2>PNJ</h2>
+    <p>Les PNJ sont par défaut créés avec les 4 compétences de base. Vous pouvez en ajouter d'autres avec l'icône <em class="fas fa-plus">&nbsp;</em> .</p>
     <h3>Montrer le portrait</h3>
-    <p>Cliquer sur le portrait d'un PnJ ouvre une fenêtre qui propose de montrer ce portrait à tous les joueurs et joueuses. Si validé, une fenetre s'affichera dans leurs écrans avec le portrait.</p>    
+    <p>Cliquer sur le portrait d'un PNJ ouvre une fenêtre qui propose de montrer ce portrait à tous les joueurs et joueuses. Si validée, une fenetre s'affichera sur leurs écrans avec le portrait.</p>    
     <h3>Règles avancées</h3>
-    <p>Lorsque l'option <em>Règles avancées</em> est activées, les feuilles de PNJs sont modifiées:</p>
+    <p>Lorsque l'option <em>Règles avancées</em> est activée, les feuilles de PNJs sont modifiées:</p>
     <ul><li>Les compétences, dommages etc ont désormais deux cases valeurs: la première pour la valeur normale, la seconde pour la valeur élite. </li>
-    <li>Une case <em>élite</em> apparait à côté du type. Si la case est vide, le PNJ n'est pas élite et ce sont les premières valeurs qui seront utilisées et affichées lorsque la feuille est verrouillée. Cocher la case pour modifier le PNJ en élite et utiliser les secondes valeurs.</li></ul>
+    <li>Une case <em>élite</em> apparaît à côté du type. Si la case est vide, le PNJ n'est pas élite et ce sont les premières valeurs qui seront utilisées et affichées lorsque la feuille est verrouillée. Cocher la case pour modifier le PNJ en élite et utiliser les secondes valeurs.</li></ul>
     <h2>Jets de dés</h2>
-    <p>Les jets de compétence sont effectués en cliquant sur le symbole <em class="fas fa-dice">&nbsp;</em>.</p><p>Une fenetre apparaitt, dans laquelle vous pouvez préciser l'utilisation d'un point d'héroïsme pour rajouter 1d6. Attention: le point sera automatiquement dépensé dans la réserve du personnage.</p>
+    <p>Les jets de compétence sont effectués en cliquant sur le symbole <em class="fas fa-dice">&nbsp;</em>.</p><p>Une fenetre apparaît, dans laquelle vous pouvez préciser l'utilisation d'un point d'héroïsme pour rajouter 1d6. Attention: le point sera automatiquement dépensé depuis la réserve du personnage.</p>
     <h3>Primes et pénalités</h3>
+    <p>Toutes les primes sont gérées</p>
+    <p>Toutes les pénalités sont gérées sauf Risque qui reste à la discrétion du MJ</p>
     <p></p>
 </div>
