--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -9,7 +9,7 @@
                     <div class="name-text">{{actor.name}}</div>
                     {{/if}}
                     <div class="right-icon">
-                        <a class="sheet-change-lock" title="{{localize " CLEENMAIN.label.unlock_sheet"}}">
+                        <a class="sheet-change-lock" title="{{localize 'CLEENMAIN.label.unlock_sheet'}}">
                             {{#if unlocked}}
                             <i class="fas fa-lock-open"></i>
                             {{else}}
@@ -38,7 +38,7 @@
                     </select>
                     {{#if eliteRuleset}}
                     <div class="elite-block">
-                        <label for="system.elite" title="{{localize " CLEENMAIN.elite.description"}}">{{localize
+                        <label for="system.elite" title="{{localize 'CLEENMAIN.elite.description'}}">{{localize
                             "CLEENMAIN.label.elite"}} : </label>
                         <input class="checkbox" data-field="system.elite" name="system.elite" type="checkbox" {{checked
                             actorSystem.elite}}>
@@ -49,7 +49,7 @@
                     {{#if unlocked}}
                     <div class="weapon-line">
                         <div class="line-label">{{localize "CLEENMAIN.weapon.add"}}</div>
-                        <a class="item-create" data-type="weapon" title="{{localize " CLEENMAIN.weapon.add"}}">
+                        <a class="item-create" data-type="weapon" title="{{localize 'CLEENMAIN.weapon.add'}}">
                             <i class="fas fa-plus"></i>
                         </a>
                     </div>
@@ -86,8 +86,8 @@
                             name="defenceSkill.system.base" value="{{defenceSkill.system.base}}" data-dtype="Number" />
                         {{#if eliteRulesetModif}}
                         <div class="central-text">/</div>
-                        <input class="npcdefence-edit skill-value input-short" title="{{localize "
-                            CLEENMAIN.elite.skill"}}" data-field="system.baseNpcElite" type="number"
+                        <input class="npcdefence-edit skill-value input-short" title="{{localize 'CLEENMAIN.elite.defense'}}"
+                            data-field="system.baseNpcElite" type="number"
                             name="defenceSkill.system.baseNpcElite" value="{{defenceSkill.system.baseNpcElite}}"
                             data-dtype="Number" />
                         {{/if}}
@@ -129,8 +129,8 @@
                                 name="skill.system.base" value="{{skill.system.base}}" data-dtype="Number" />
                             {{#if ../eliteRulesetModif}}
                             <div class="central-text">/</div>
-                            <input class="inline-edit skill-value input-short" title="{{localize "
-                                CLEENMAIN.elite.skill"}}" data-field="system.baseNpcElite" type="number"
+                            <input class="inline-edit skill-value input-short" title="{{localize 'CLEENMAIN.elite.skill'}}"
+                                data-field="system.baseNpcElite" type="number"
                                 name="skill.system.baseNpcElite" value="{{skill.system.baseNpcElite}}"
                                 data-dtype="Number" />
                             {{/if}}
