--- a/less/chat/rollDialog.less
+++ b/less/chat/rollDialog.less
@@ -59,6 +59,10 @@
             width: 5em;
             margin: 0 0 1em 1em;
         }
+        select{
+            width: 5em;
+            margin: 0 0 1em 1em;
+        }
     }
     .paddingend{
         padding: 0 0 5em 0;
