--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -1,13 +1,13 @@
 .cleenmain.sheet.player {
     h1 {
         font: @h1-font;
-        color: @title-color;
+        color: @h1-color;
         text-transform: @h1-text-transform;
         border: @h1-border;
     }
     h2 {
         font: @h2-font;
-        color: @title-color;
+        color: @h2-color;
     }
     .window-content {
         background: @playersheet-background;
